chore: simplify