@@ -18,15 +18,11 @@ class DefaultResourceProvider implements Provider {
   public Object provide(final Args args) {
     requireNonNull(args);
 
-    final String resourceName = args
-        .getResourceFilename()
-        .orElse("");
+    final String resourceName = args.getResourceFilename().orElse("");
     final String filename;
 
     if (resourceName.isEmpty()) {
-      final Res res = args
-          .getTargetElement()
-          .getAnnotation(Res.class);
+      final Res res = args.getTargetElement().getAnnotation(Res.class);
       filename = res.value();
     } else {
       filename = resourceName;
@@ -38,73 +34,43 @@ class DefaultResourceProvider implements Provider {
     final Class<?> type = args.getTargetElementClass();
     final Unmarshaller<?> unmarshaller;
 
-    final Optional<Use> optUse =
-        lookForAnnotation(Use.class, args.getTargetElement(),
-            args.getTestClass());
+    final Optional<Use> optUse = lookForAnnotation(Use.class, args.getTargetElement(), args.getTestClass());
 
     if (optUse.isPresent()) {
       final Use use = optUse.get();
 
       try {
-        unmarshaller = use
-            .value()
-            .getDeclaredConstructor()
-            .newInstance();
+        unmarshaller = use.value().getDeclaredConstructor().newInstance();
       } catch (final Exception ex) {
-        throw new InvalidMarshallerClassException(use
-            .value()
-            .getSimpleName(), ex);
+        throw new InvalidMarshallerClassException(use.value().getSimpleName(), ex);
       }
     } else {
       if (type.isAssignableFrom(String.class)) {
-        unmarshaller = Puma4j
-            .instance()
-            .textMarshaller();
+        unmarshaller = Puma4j.instance().textMarshaller();
       } else if (type.isAssignableFrom(byte[].class) || type.isAssignableFrom(Byte[].class)) {
-        unmarshaller = Puma4j
-            .instance()
-            .binaryMarshaller();
+        unmarshaller = Puma4j.instance().binaryMarshaller();
       } else if (type.isAssignableFrom(Properties.class)) {
-        unmarshaller = Puma4j
-            .instance()
-            .propertiesMarshaller();
+        unmarshaller = Puma4j.instance().propertiesMarshaller();
       } else {
         if (hasExtension) {
-          unmarshaller =
-              Puma4j
-                  .instance()
-                  .getMarshallerByExtension(extension)
-                  .orElseThrow(() -> newExtNotSupportedException(args, filename, extension));
+          unmarshaller = Puma4j.instance()
+              .getMarshallerByExtension(extension)
+              .orElseThrow(() -> newExtNotSupportedException(args, filename, extension));
         } else {
           throw new NoMarshallerException(
-              buildErrorMessage(
-                  "Unable to find a properly marshaller for specified resource.",
-                  args, filename));
+              buildErrorMessage("Unable to find a properly marshaller for specified resource.", args, filename));
         }
       }
     }
 
-    final String path = Paths
-        .get(args
-            .getContext()
-            .getBasePath(), filename)
-        .toString();
+    final String path = Paths.get(args.getContext().getBasePath(), filename).toString();
 
-    try (final InputStream input = args
-        .getTestClass()
-        .getResourceAsStream(path)) {
+    try (final InputStream input = args.getTestClass().getResourceAsStream(path)) {
       return unmarshaller.unmarshal(
-          new Unmarshaller.Args(
-              input,
-              args.getTargetElementType(),
-              args.getTestClass(),
-              args.getTargetElement()));
+          new Unmarshaller.Args(input, args.getTargetElementType(), args.getTestClass(), args.getTargetElement()));
     } catch (final Exception ex) {
       throw new UnmarshallingException(
-          buildErrorMessage(
-              "Error unmarshalling resource to specified type.",
-              args,
-              filename), ex);
+          buildErrorMessage("Error unmarshalling resource to specified type.", args, filename), ex);
     }
   }
 }
